Added initial code changes to support GORM database access

--- a/revelapp/conf/app.conf
+++ b/revelapp/conf/app.conf
@@ -133,6 +133,11 @@ log.info.output  = stderr
 log.warn.output  = stderr
 log.error.output = stderr
 
+# Setup the database driver
+db.import = github.com/mattn/go-sqlite3
+db.driver = sqlite3
+db.spec = :memory:
+build.tags=gorp
 
 
 ################################################################################
